Fixed bugs, added fonts

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div style="text-align: center;">
 		<h1>Генератор адресных табличек<br>города Курска</h1>
 		<p>Введите название улицы (автодополнение из базы КЛАДР), номер дома и номера соседних домов.<br>Номера соседних домов указываются опционально для удобства навигации и понимания принципа возрастания нумерации.</p>
-		<p>Навигационная информация на задании выполняется на двух отдельных табличках с названием улицы и номером дома, которые размещаются на одной высоте.<br>Расстояние между ними должно составлять 100 мм.
+		<p>Навигационная информация на здании выполняется на двух отдельных табличках с названием улицы и номером дома, которые размещаются на одной высоте.<br>Расстояние между ними должно составлять 100 мм.
 		</p>
 	</div>
 
@@ -103,6 +103,7 @@
 		<input class='inputbut' type="button" id="buttonDownloadSignName" value="Скачать название">
 		<input class='inputbut' type="button" id="buttonDownloadSignNumber" value="Скачать номер">
 	</center>
+	<a  class='href' href="Mozer.zip">Скачать архив шрифтов</a>
 
 	<div class="Ulitsy_sootvetstvie" value=''></div>
 	<div class="ulitsy_goroda" value=''></div>
