--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+	<meta name="google-site-verification" content="x9MEeExpZXigFD28uNiPXZUNLXq0ADivrvtjib-stXA" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Генератор адресных табличек</title>
 	<link href="./css/styles.css" rel="stylesheet" type="text/css">
