--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta name="google-site-verification" content="x9MEeExpZXigFD28uNiPXZUNLXq0ADivrvtjib-stXA" />
+	<link rel="canonical" href="http://address.rkursk.ru/" /> 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Генератор адресных табличек</title>
 	<link href="./css/styles.css" rel="stylesheet" type="text/css">
